--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://divyapabba.github.io/me",
+  "homepage": "https://divyapabba08.github.io/me",
   "dependencies": {
     "create-react-app": "^3.4.1",
     "gh-pages": "^2.2.0",
